@@ -12,6 +12,7 @@
   * Cleaned up retrieving headers progress display when using fullxover=1.
   * Added streaming support for header retrieval, using fullxover should now be many times faster. (and on high ping links, increasing the maxstreaming setting can improve the speed even more.)
   * Force stdout to be line buffered. (Keeps stdout and stderr from getting out of sync when redirecting both to a file.)
+  * Force posts with no body to be handled as text. (As opposed to giving a "No encoded data found" error and keeping the temp file)
 
 2001-11-24 - v0.15.2:
   * Fix -df with filenames that begin or end in "non-word" chars since the \< and \> will not match because there is no word boundry in such a case. (reported by Bernhard Josef Rieder)
